assets/main.scss
/* ... */
h1, h2 {
    font-family: $font-family-serif;
}
h6 {
    font-style: italic;
}
@media (min-width: 1200px) {
    h2 {
        font-size: 1.75rem;
    }
    h3 {
        font-size: 1.5rem; 
    }
    h4 {
        font-size: 1.25rem;
    }
    h5 {
        font-size: 1rem;
    }
    .cm-contributors.search-box .dt-container, .cm-expenditures.search-box .dt-container {
        //targets the dt table search box
        margin-top: -4.25rem;
    }

}
@media (max-width: 1199px) {
    .cm-contributors.col-table-6 .dt-container > div:nth-child(1) > div:nth-child(1),
    .cm-expenditures.col-table-6 .dt-container > div:nth-child(1) > div:nth-child(1) {
        //left aligns the search box
        //display: none !important;
    }
    .cm-contributors .dt-container, .cm-expenditures .dt-container {
        //top margin on mobile for search box
        margin-top: -1.5rem;
    }
    .cm-contributors .dt-container > div:nth-child(1) > div:nth-child(2),
    .cm-expenditures .dt-container > div:nth-child(1) > div:nth-child(2) {
        //left aligns the search box on mobile
        margin: 0 !important;
        .dt-search {
            text-align: left;
        }
    }
}
.cm-loans .dt-container {
    margin-top: -1.5rem;
}
@media (min-width: 768px) {
   .light-border-se {
        border-left: 1px solid $light-border-subtle;
        border-right: 1px solid $light-border-subtle;
   }
}
.cm-contributors h3, .cm-expenditures h3 {
    position: relative;
    z-index: 2;
    display: inline;
}
.bg-red {
    background-color: $red !important;
}
.bg-gray {
    background-color: $gray !important;
}
.offcanvas.offcanvas-start {
    width: 600px;
}
.site-title {
    color: $dark;
}
.navbar a {
    text-decoration: none;
}
.breadcrumb-item+.breadcrumb-item::before {
    color: rgb(100, 116, 139);
}
.breadcrumb-item a {
    color: rgb(100, 116, 139);
}
.breadcrumb-item.active {
    color: rgb(100, 116, 139);
    font-weight: bold;
}
.breadcrumb {
  --bs-breadcrumb-divider: "\203A"; /* › character */
}
img.profile {
    border-radius: 50%;
    width: 100%;
    max-width: 16rem;
}
table {
    th {
        background-color: $tableheadcolor !important;
        white-space: nowrap;
    }
}
.dt-layout-full {
    overflow-x: auto;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}
.table-row {
    row-gap: 1rem;
    @extend .mb-3;
}

// use these inside col-md-# containers
.col-table-6, .col-table-8, .col-table-4, .col-table-12 {
    @extend .bg-white;
    @extend .border;
    @extend .border-light-subtle;
    @extend .rounded;
    @extend .p-3;
    // height: 100%;
}

// use these together with card
//.money-card {
    //text-align: center;
    // .card-text {
    //     font-size: 1.5rem;
    // }
    // .card-title {
    //     font-size: 1rem;
    // }
//}
// .money-card-1 {
//     background-color: mix(white, $secondary, 50%);
// }
// .money-card-2 {
//     background-color: mix(white, $red, 50%);
// }
.contributions-expenses {
    flex: 1 0 0;
    // flex-grow: 1;
    // min-width: 13rem;
    // max-width: 13rem;
}
.factoid-text {
    text-align: center;
    @extend .display-6; 
    @extend .fw-semibold;
}
.hover-link:hover .icon,
.hover-link:focus-within .icon {
    display: inline-block !important;
}
.eth-shadow {
    position: relative;
    z-index: 2;
    box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.3);
}
@mixin hover-glow($color) {
  position: relative;

  &::before,
  &::after {
    content: "";
    position: absolute;
    inset: 0;
    border-radius: inherit;
    pointer-events: none;
    transition: opacity 0.4s ease-in-out;
  }

  // base shadow
  &::before {
    box-shadow: 0 0 0.15rem $color;
    opacity: 1;
  }

  // hover glow
  &::after {
    box-shadow: 0 0 0.25rem $color;
    opacity: 0;
  }

  &:hover::after {
    opacity: 1;
  }
}
.box-shadow-contributions {
  @include hover-glow($contributions);
}

.box-shadow-expenditures {
  @include hover-glow($expenditures);
}

.box-shadow-thirdparty {
  @include hover-glow($thirdparty);
}

.box-shadow-tertiary {
  @include hover-glow($tertiary);
}

.box-shadow-primary {
  @include hover-glow($primary);
}

.eth-border-top {
    border-top: 7px solid $red;
}
.eth-border-bottom {
    border-bottom: 7px solid $red;
}
thead th:first-child, tfoot th:first-child {
  border-top-left-radius: 6px;
  
}
thead th:last-child, tfoot th:last-child {
  border-top-right-radius: 6px;
  
}
/*
.bg-gradient-line-primary {
    background: linear-gradient(90deg, $primary 0%, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, 1) 60%, $primary 100%);
    height: 2px;
    margin: auto;
    width: 15rem;
}
.bg-gradient-line-tertiary {
    background: linear-gradient(90deg, $tertiary 0%, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, 1) 60%, $tertiary 100%);
    height: 2px;
    margin: auto;
    width: 15rem;
}
.bg-gradient-line-quaternary {
    background: linear-gradient(90deg, $quaternary 0%, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, 1) 60%, $quaternary 100%);
    height: 2px;
    margin: auto;
    width: 15rem;
}
.bg-gradient-line-quinary {
    background: linear-gradient(90deg, $quinary 0%, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, 1) 60%, $quinary 100%);
    height: 2px;
    margin: auto;
    width: 15rem;
}
.bg-gradient-line-senary {
    background: linear-gradient(90deg, $senary 0%, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, 1) 60%, $senary 100%);
    height: 2px;
    margin: auto;
    width: 15rem;
}*/

.navbar-brand {
    line-height: 1.1;
    align-items: flex-start; /* aligns left edge of both lines */
}

.navbar-brand .sf-top {
    font-size: 1rem;          /* slightly larger */
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 0.35em;      /* wider tracking */
    display: block;              /* full line, but content-sized */
    white-space: nowrap;         /* prevents wrapping */
    line-height: 1;
    font-family: 'Roboto Slab';
}
/* ... */

